@@ -12,8 +12,8 @@ from stalker.exceptions import CircularDependencyError
 from stalker.conf import defaults
 from stalker import db
 from stalker.db.session import DBSession, ZopeTransactionExtension
-from stalker import (SimpleEntity, Entity, Project, Repository,
-                     StatusList, Status, Task, Type, User, Booking)
+from stalker import (Entity, Project, Repository, StatusList, Status, Task,
+                     Type, User, Booking)
 
 import logging
 logger = logging.getLogger(__name__)
@@ -1721,7 +1721,7 @@ class TaskTester(unittest.TestCase):
         #self.assertRaises(RuntimeWarning, Task, **self.kwargs)
         import warnings
         with warnings.catch_warnings(record=True) as w:
-            new_task = Task(**self.kwargs)
+            Task(**self.kwargs)
             self.assertTrue(
                 issubclass(w[-1].category, RuntimeWarning)
             )
@@ -2187,10 +2187,10 @@ task Task_5679 "Modeling" {
         self.test_task._computed_end = None
         self.assertFalse(self.test_task.is_scheduled)
 
-    def test_schedule_using_is_EFFORT_by_dafault(self):
-        """testing if the schedule_using is EFFORT by default
+    def test_schedule_flag_is_EFFORT_by_default(self):
+        """testing if the schedule_flag is EFFORT by default
         """
-        self.assertEqual(self.test_task.schedule_using, 'EFFORT')
+        self.assertEqual(self.test_task.schedule_flag, 'EFFORT')
     
     def test_schedule_constraint_is_NONE_by_default(self):
         """testing if the schedule_constraint attribute is None by default
